--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">BusTracker</string>
+    
+    <!-- Main Screen -->
+    <string name="main_title">Bus Attendance System</string>
+    <string name="scan_instruction">Please scan your NFC card to record attendance</string>
+    <string name="settings">Settings</string>
+    <string name="attendance_record">ATTENDANCE RECORD</string>
+    <string name="scan_nfc_card">Scan NFC Card</string>
+    <string name="id_format">ID: %1$s</string>
+    <string name="verified">✓ VERIFIED</string>
+    <string name="waiting_for_scan">WAITING FOR SCAN</string>
+    <string name="time_format">Clock: %1$s</string>
+    <string name="date_label">Today</string>
+    
+    <!-- Settings Screen -->
+    <string name="configuration">Configuration</string>
+    <string name="manage_settings">Manage your bus attendance system settings</string>
+    <string name="server_url_title">Server URL</string>
+    <string name="server_url_description">Configure the server endpoint for data synchronization</string>
+    <string name="server_url_label">Server URL</string>
+    <string name="server_url_hint">Enter the server URL (e.g., http://example.com)</string>
+    <string name="device_id_title">Device Identifier</string>
+    <string name="device_id_description">Set a unique identifier for this device</string>
+    <string name="device_id_label">Device ID</string>
+    <string name="device_id_hint">Enter a unique identifier for this device</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="cancel">Cancel</string>
+    <string name="back">Back</string>
 </resources>
