--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">BusTracker</string>
-    
+    <string name="app_name">Bus Attendance System</string>
+
     <!-- Main Screen -->
     <string name="main_title">Bus Attendance System</string>
     <string name="scan_instruction">Please scan your NFC card to record attendance</string>
     <string name="settings">Settings</string>
     <string name="attendance_record">ATTENDANCE RECORD</string>
     <string name="scan_nfc_card">Scan NFC Card</string>
+    <string name="unknown">Unknown</string>
     <string name="id_format">ID: %1$s</string>
     <string name="verified">✓ VERIFIED</string>
     <string name="waiting_for_scan">WAITING FOR SCAN</string>
     <string name="time_format">Clock: %1$s</string>
     <string name="date_label">Today</string>
-    
+
     <!-- Settings Screen -->
     <string name="configuration">Configuration</string>
     <string name="manage_settings">Manage your bus attendance system settings</string>
