--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="scan_instruction">Please scan your NFC card to record attendance</string>
     <string name="settings">Settings</string>
     <string name="attendance_record">ATTENDANCE RECORD</string>
-    <string name="scan_nfc_card">Scan NFC Card</string>
+    <string name="scan_nfc_card">Scan NFC Card or QR Code</string>
     <string name="unknown">Unknown</string>
     <string name="id_format">ID: %1$s</string>
     <string name="verified">✓ VERIFIED</string>
